--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "html-webpack-plugin": "^5.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.1",
+    "redux": "^4.2.0",
     "style-loader": "^3.3.1",
     "styled-components": "^5.3.6",
     "swc-loader": "^0.2.3",
